--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <title>Jadwal Sholat - Signage</title>
     <!-- Gunakan viewport standar agar responsive -->
-    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="assets/style.css" />
 </head>
 
