--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -164,9 +164,7 @@
 
     <style>
         :focus {
-            outline: 3px solid #ffcc00;
-            /* contoh highlight */
-            outline-offset: 2px;
+            border: 2px solid #00BCD4;
         }
     </style>
 
